--- a/src/components/Content/Price/Price.module.scss
+++ b/src/components/Content/Price/Price.module.scss
@@ -1,3 +1,55 @@
-header {
-    color:rgb(0, 0, 0);
-}
+// .price {
+//     background-color: #FAFAFA;;
+// }
+
+// .header {
+//     color:rgb(0, 0, 0);
+//     padding-top: 100px;
+//     font-size: 45px;
+//     font-weight: 700;
+// }
+
+// .cards {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: center;
+//     gap:100px;
+//     margin-top: 50px;
+//     padding-bottom: 150px;
+// }
+
+// .cardContent {
+//     background-color: #ffffff;
+//     width: 300px; 
+//     height: 320px;
+//     border-radius: 10px;
+//     margin-top: 50px;
+
+//     .tariff {
+//         margin-top: 40px;
+//         font-size: 24px;
+        
+//     }
+
+//     .cost {
+//         margin-top: 20px;
+//         font-size: 36px;
+//     }
+
+//     .period {
+//         margin-top: 5px;
+//         font-size: 20px;
+//     }
+
+//     .button {
+//         background: url("/home/animButton.gif");
+//         margin-top: 70px;
+//         width: 200px;
+//         height: 50px;
+//         background-size: cover;
+//         border-radius: 30px;
+//         cursor: pointer;
+//         font-size: 16px;
+        
+//     }
+// }
